# Claw-Service-Hub

./: .all-contributorsrc  .env.example  .gitignore  CHANGELOG.md  CHAT_PLAN.md  CONTRIBUTING.md  IMPROVEMENT_PLAN.md  KEY_AUTH_PLAN.md  LICENSE  README.md  SECURITY.md  SKILL_COMPLETE_PLAN.md  SKILL_TEST_PLAN.md  SOLUTION.md  TEST_REPORT.md  TEST_STRATEGY.md  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  start_server.py  sync-skill.sh
.github/: pull_request_template.md
.github-pr/: CLAW-SERVICE-HUB-SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  docs.yml  release.yml  test-client.yml
claw-chat-hub/: SKILL.md
claw-trade-hub/: SKILL.md  trade_client.py
claw_chat_hub/: SKILL.md  __init__.py  chat_client.py
claw_service_hub/: SKILL.md  cli.py
client/: README.md  __init__.py  claw-client  client.py  example.py  management_client.py  pyproject.toml  setup.py  skill_client.py  test_client.py
client/claw_client/: __init__.py  base.py  cli.py  exceptions.py  types.py
client/claw_client/consumers/: __init__.py  skill_query.py
client/claw_client/hub/: __init__.py  client.py
client/claw_client/providers/: __init__.py  management.py  tool_service.py
client/claw_client/utils/: __init__.py  ws_utils.py
client/claw_service_hub_client/: __init__.py  client.py
docker/: Dockerfile
docs/: api.md  bugfixes.md  changelog.md  deployment.md  index.md  installation.md  multi_user_architecture.md  phase1_2_complete.md  quickstart.md
docs/examples/: daily-recommendation.md  index.md
docs/guide/: architecture.md  cli.md  consumer.md  provider.md
examples/: README.md  calculator_consumer.py  calculator_service.py  external_executor.py  multi_user_demo.py  subagent1_management_only.py  subagent2_skill_consumer.py  user_auth_client.py  user_auth_example.py  weather_consumer.py  weather_service.py
examples/csv-processor-skill/: SKILL.md  run.py
server/: __init__.py  chat_channel.py  key_manager.py  logging_config.py  main.py  ratelimit.py  rating.py  registry.py  storage.py  tunnel.py  user_manager.py  validators.py
server/api/: __init__.py  routes.py
server/auth/: __init__.py  key_manager.py  user_manager.py
server/chat/: __init__.py  channel.py  handlers.py
server/core/: __init__.py  registry.py
server/trade/: __init__.py  bid.py  handlers.py  listing.py  negotiation.py  transaction.py
server/utils/: __init__.py  logging_config.py  ratelimit.py  rating.py  storage.py  validators.py
skills/: README.md
skills/claw-chat-hub/: SKILL.md  __init__.py  hub_runner.py
skills/claw-chat-skill/: SKILL.md
skills/claw-service-hub/: SKILL.md  __init__.py  hub_runner.py
skills/claw-service-skill/: SKILL.md
tests/: conftest.py  test_hub_client_integration.py  test_hub_client_unit.py  test_key_manager.py  test_phase1_2.py  test_ratelimit.py  test_registry.py  test_storage.py  test_tunnel.py  test_user_manager.py  test_validators.py
(+63 files in other folders)
