[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claw-service-hub"
version = "0.1.0"
description = "Service Marketplace for OpenClaw Subagents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TangBoheng", email = "example@email.com"}
]
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
csh = "claw_service_hub.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "client*", "claw_service_hub*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
